--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-     - images/facebook-log.png
-     - images/google-log.png
+#  assets:
+#     - images/facebook-log.png
+#     - images/google-log.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
